--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "axios": "^1.3.3",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.2.0",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "date-fns": "^2.29.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-chartjs-2": "^5.2.0",
